[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-files = "0.6.2"
actix-web-actors = "4.1.0"
actix-http = "3.2.1"
chrono = "0.4.22"
gloo-file = "0.2"