[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
reqwasm = "0.5.0"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.32"
gloo-net = "0.2.3"
wasm-logger = "0.2.0"
log = "0.4.17"
wasm-bindgen = "0.2.82"
js-sys = "0.3"
gloo-file = "0.2"
chrono = "0.4.22"
blob = "0.3.0"


[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "File",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]